k8s/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-lab-api
  namespace: derek-local
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-lab-api
  template:
    metadata:
      labels:
        app: dotnet-lab-api
    spec:
      containers:
        - name: dotnet-lab-api
          image: 10.96.27.59:5000/weather-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
