k8s/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-lab-api-service
  namespace: derek-local
spec:
  type: NodePort
  selector:
    app: dotnet-lab-api
  ports:
    - protocol: TCP
      port: 80           # Service 内部端口
      targetPort: 8080   # Pod 容器端口
      nodePort: 30080    # 宿主机端口（可自定义30000-32767之间）
