k8s/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-lab-api-ingress
  namespace: derek-local
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnet-lab-api-service
                port:
                  number: 80
